--- a/src/main/webapp/assets/css/index.css
+++ b/src/main/webapp/assets/css/index.css
@@ -4,7 +4,7 @@ body {
     line-height: 1.6;
     color: #333;
     margin: 0;
-    background-color: #f5f5f5; /* Subtle background */
+    background-color: #ddd; /* Subtle background */
 }
 
 .container {
