--- a/src/main/webapp/assets/css/employer/t3.css
+++ b/src/main/webapp/assets/css/employer/t3.css
@@ -1,3 +1,12 @@
+body {
+	margin: 0;
+	padding: 0;
+	font-family: "Open Sans", Arial, sans-serif;
+	font-size: 14px;
+	line-height: 1.42857143;
+	color: #333;
+	background-color: #fff;
+}
 .clear {
   clear: both;
 }
