--- a/src/main/webapp/assets/css/register.css
+++ b/src/main/webapp/assets/css/register.css
@@ -14,9 +14,11 @@ body {
 }
 
 .register-container {
-    width: 100%;
-    height: 100%;
+	align-self: center;
+    width: 100vw;
+    height: calc(100vh - 56px);
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     max-width: 700px;
